k8s/pvc-demo.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: app
