k8s/stateful-deploy.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: writer 
  namespace: app 
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: writer 
  
  template:
    metadata:
      labels:
        app: writer
    
    spec: 
      containers:
        - name: busybox
          image: busybox:1.36
          command: ["sh", "-c"]
          args: 
            - |
              echo "Starting writer pod..."
              date >> /data/timestamps.log
              echo "Wrote a line /data/timestamps.log"
              sleep 3600
          volumeMounts:
            - name: data 
              mountPath: /data 
      volumes:
        - name: data 
          PersistentVolumeClaim:
            claimName: app-pvc
