k8s/ingress-http.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: web-ingress 
  namespace: app 
spec: 
  ingressClassName: nginx 
  rules:
    - host: mohammadahmed1774
      http: 
        paths:
          - path: /
            pathType: Prefix 
            backend: 
              service: 
                name: web 
                port: 
                  number: 80
